@@ -20,3 +20,10 @@ stopwords = OAuth
 stopwords = PRs
 stopwords = Str
 -remove = Test::Synopsis
+
+[Prereqs / TestRequires]
+Test::Needs = 0
+
+[Prereqs / TestRecommends]
+File::pushd = 0
+Test::Git = 0
