@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Prefer GH_ENTERPRISE_TOKEN and GITHUB_ENTERPRISE_TOKEN if not a public GitHub
+  host (GH#36) (Olaf Alders)
+
 2.000000 2022-06-23
 
 - The "hub" CLI tool is no longer used for created pull requests. The GitHub
